scrollable bar should have padding on the right to prevent horizontal scrolling

--- a/styles/components/_list.scss
+++ b/styles/components/_list.scss
@@ -10,6 +10,7 @@
 .list--scrollable {
     overflow-y: auto;
     height: 100%;
+    padding-right: 0.5rem;
 }
 
 .list--horizontal {
